basic apex class for testing

--- a/force-app/main/default/classes/vacationData.cls
+++ b/force-app/main/default/classes/vacationData.cls
@@ -1,6 +1,4 @@
 public with sharing class vacationData {
-    SObject dataType = new SObject(Name = 'Vacation');
-    public static void vacationData() {
-        
+    public vacationData() {
     }
 }
